--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -44,3 +44,27 @@ toolbar {
 
 /* Tab: hovered colors */
 /* #tabbrowser-tabs .tabbrowser-tab:hover:not([selected]) .tab-content { background: linear-gradient(to bottom,#808080,#FFFFFF) !important; } */
+
+
+
+
+
+
+
+
+
+/**
+ * Decrease size of the sidebar header
+ */
+#sidebar-header {
+  font-size: 1.2em !important;
+  padding: 2px 6px 2px 3px !important;
+}
+#sidebar-header #sidebar-close {
+  padding: 3px !important;
+}
+#sidebar-header #sidebar-close .toolbarbutton-icon {
+  width: 14px !important;
+  height: 14px !important;
+  opacity: 0.6 !important;
+}
